--- a/gobotany/site/templates/gobotany/_species_list_main_content.html
+++ b/gobotany/site/templates/gobotany/_species_list_main_content.html
@@ -2,7 +2,7 @@
 
 <p>To filter the list, type in the box under any column name.</p>
 
-<table id="species">
+<table id="species" class="list">
     <thead>
         <tr>
             <th class="name">Scientific Name</th>
