--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -765,9 +765,9 @@ body.plantshare {
     } /* end .info-section, .location-section */
     &#profile {
         .info-section {
-            margin: 20px 0;
+            margin: 0 0 20px;
             .info.box {
-                margin: 20px 0;
+                margin: 0 0 20px;
                 padding: 10px 15px 20px;
                 table {
                     margin: 0;
