--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -1155,6 +1155,8 @@ body.plantshare#new-sighting .thumb-gallery .thumb-frame .thumb { vertical-align
 body.plantshare#new-sighting .thumb-gallery .thumb-frame .delete-link { width: 100%; text-align: center; margin: 2px 0; padding-top: 2px; }
 body.plantshare#new-sighting .thumb-gallery .thumb-frame .delete-link img { vertical-align: middle; margin-right: 4px; }
 body.plantshare#manage-sightings .content table { width: 100%; }
+body.plantshare#manage-sightings .content table th.action { width: 10%; }
+body.plantshare#manage-sightings .content table td.action { text-align: center; }
 body.plantshare#locator #main h3 { font-family: Verdana, Geneva, "Lucida Sans Unicode", sans-serif; font-size: 12px; line-height: 24px; }
 body.plantshare#locator #main #sightings-status { display: none; /* initially hide, until updating value via JS */ float: right; line-height: 24px; }
 body.plantshare#sightings #main > ul { margin-top: 14px; }
