--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -808,6 +808,9 @@ body.plantshare {
             margin: 20px 0;
             padding: 10px 0;
         }
+        div#form-template {
+            display: none;
+        }
         table.checklists-list {
             background: #fff;
             border: 1px solid #C3D941;
