--- a/gobotany/plantshare/templates/profile.html
+++ b/gobotany/plantshare/templates/profile.html
@@ -26,6 +26,10 @@
           <table>
               <tbody>
                   <tr>
+                      <td class="first">Username:</td>
+                      <td>{{ user.username }}</td>
+                  </tr>
+                  <tr>
                       <td class="first">Visibility:</td>
                       <td>
                           <div class="display">
@@ -43,7 +47,7 @@
                       </td>
                   </tr>
                   <tr>
-                      <td class="first">Screen Name:</td>
+                      <td class="first">Display Name:</td>
                       <td>
                           <div class="display">
                               <p><span>[Not yet selected]</span><a href="#" class="edit-link">Edit</a></p>
