--- a/gobotany/plantshare/templates/sighting.html
+++ b/gobotany/plantshare/templates/sighting.html
@@ -1,5 +1,6 @@
 {% extends "gobotany/_page_free_sidebar.html" %}
 {% load mapping_tags %}
+{% load plantshare_tags %}
 
 {% block title %}Sighting: {{ sighting.identification }} at
     {{ sighting.location|capfirst }}: PlantShare{% endblock %}
@@ -13,7 +14,7 @@
 
 {% location_map location=sighting.location height_px="150" width_px="302" zoom="7" id="id_location_map" %}
 
-<p>Posted {{ sighting.created }} by {{ sighting.user }}</p>
+<p>Posted {{ sighting.created }} by {% user_display_name user %}</p>
 
 {% if sighting.notes %}
     <p>Description or comments: {{ sighting.notes }}</p>
