--- a/gobotany/plantshare/templates/manage_sightings.html
+++ b/gobotany/plantshare/templates/manage_sightings.html
@@ -1,5 +1,6 @@
 {% extends "gobotany/_page_free_sidebar.html" %}
 {% load humanize %}
+{% load plantshare_tags %}
 
 {% block title %}Manage Your Sightings: PlantShare{% endblock %}
 
@@ -14,7 +15,7 @@
     <h1>Manage Your Sightings</h1>
 
     {% if sightings %}
-        <p><b>{{ user_name }}</b>, here
+        <p><b>{% user_first_name user %}</b>, here
         {% if sightings|length > 1 %}
             are the {{ sightings|length|intcomma }} sightings
         {% else %}
