Activate the Delete link on the dialog. (#440)

--- a/gobotany/plantshare/templates/manage_sightings.html
+++ b/gobotany/plantshare/templates/manage_sightings.html
@@ -47,7 +47,7 @@
             </thead>
             <tbody>
             {% for sighting in sightings %}
-                <tr>
+                <tr id="sighting-{{ sighting.id }}">
                     <td>{{ sighting.identification }}</td>
                     <td>{{ sighting.location }}</td>
                     <td>{{ sighting.created }}</td>
