--- a/gobotany/plantshare/templates/_delete_sighting.html
+++ b/gobotany/plantshare/templates/_delete_sighting.html
@@ -14,11 +14,6 @@
         <h2>Are you sure you want to permanently delete this sighting?</h2>
 
         <table>
-            <thead>
-                <th>Identification</th>
-                <th>Location</th>
-                <th>Date Posted</th>
-            </thead>
             <tbody>
                 <td>{{ sighting.identification }}</td>
                 <td>{{ sighting.location }}</td>
@@ -26,9 +21,9 @@
             </tbody>
         </table>
 
-        <p>
+        <p class="actions">
             <a class="cancel-btn">No, Cancel</a>
-            <a href="#">Yes, Delete</a>
+            <a class="delete" href="#">Yes, Delete</a>
         </p>
     </div>
 {% endblock %}
