--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -356,10 +356,8 @@ body.plantshare {
             text-align: left;
         }
         table {
+            margin: 18px 0;
             width: 100%;
-            th {
-                font-weight: normal;
-            }
         }
         .cancel-btn {
             background: url(/static/images/layout/plantshare2-btn.png) no-repeat -415px -297px;
