Add table heading row back to Delete dialog, hidden. (#440)

--- a/gobotany/plantshare/templates/_delete_sighting.html
+++ b/gobotany/plantshare/templates/_delete_sighting.html
@@ -14,6 +14,11 @@
         <h2>Are you sure you want to permanently delete this sighting?</h2>
 
         <table>
+            <thead>
+                <th>Identification</th>
+                <th>Location</th>
+                <th>Date Posted</th>
+            </thead>
             <tbody>
                 <td>{{ sighting.identification }}</td>
                 <td>{{ sighting.location }}</td>
