Start making a screen for editing sightings. (#440)

--- a/gobotany/plantshare/templates/manage_sightings.html
+++ b/gobotany/plantshare/templates/manage_sightings.html
@@ -51,7 +51,9 @@
                     <td>{{ sighting.identification }}</td>
                     <td>{{ sighting.location }}</td>
                     <td>{{ sighting.created }}</td>
-                    <td class="action"><a href="#">Edit</a></td>
+                    <td class="action">
+                        <a href="{% url 'ps-edit-sighting' sighting.id %}">Edit</a>
+                    </td>
                     <td class="action">
                         <a class="delete"
                             href="{% url 'ps-delete-sighting' sighting.id %}"
