--- a/gobotany/plantshare/templates/_plantshare_navigation.html
+++ b/gobotany/plantshare/templates/_plantshare_navigation.html
@@ -14,7 +14,7 @@
             <li class="ask">{% nav_item 'Ask the Botanist' ps-questions %}</li>
             
             {% if user.is_authenticated %}
-                <li>{% nav_item 'Checklists' %}{# TODO: add URL name #}</li>
+                <li>{% nav_item 'Checklists' ps-checklists %}</li>
                 <li>{% nav_item 'Find People' %}{# TODO: add URL name #}</li>
                 <li>{% nav_item 'Your Groups' %}{# TODO: add URL name #}</li>
                 <li class="profile">{% nav_item 'Your Profile' ps-profile %}</li>
