--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -296,6 +296,7 @@ body.plantshare {
     }
     &#new-sighting, &#edit-sighting {
         .thumb-gallery {
+            margin-bottom: 28px;
             .thumb-frame {
                 display: inline-block;
                 margin: 0 5px;
