Italicize scientific names in the user's sightings list. (#440)

--- a/gobotany/plantshare/templates/manage_sightings.html
+++ b/gobotany/plantshare/templates/manage_sightings.html
@@ -1,4 +1,5 @@
 {% extends "gobotany/_page_free_sidebar.html" %}
+{% load gobotany_tags %}
 {% load humanize %}
 {% load plantshare_tags %}
 
@@ -48,7 +49,7 @@
             <tbody>
             {% for sighting in sightings %}
                 <tr id="sighting-{{ sighting.id }}">
-                    <td>{{ sighting.identification }}</td>
+                    <td>{{ sighting.identification|italicize_if_scientific|safe }}</td>
                     <td>{{ sighting.location }}</td>
                     <td>{{ sighting.created }}</td>
                     <td class="action">
